Spacing issue fixed

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -16,15 +16,24 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 select:focus {
   outline: 1px solid transparent;
   outline-offset: 1px;
-  --tw-ring-inset: var(--tw-empty, /*!*/ /*!*/);
+  --tw-ring-inset: var(--tw-empty,
+      /*!*/
+      /*!*/
+    );
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
   --tw-ring-color: rgba(26, 168, 97, 0.5);
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
-    var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
-    calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
     var(--tw-shadow, 0 0 #0000);
   border-color: rgba(26, 168, 97, 0.5);
+}
+
+.table-responsive {
+  width: calc(100vw - 289px);
+}
+
+.sidebar-heading {
+  min-height: calc(100vh - 100px);
 }
